update user group and call in front end